99_Practice/infra/k8s/posttext-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posttext-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posttext
  template:
    metadata:
      labels:
        app: posttext
    spec:
      containers:
      - name: posttext
        image: anmolverma404/posttext
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: 3001
