99_Practice/infra/k8s/client-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport-srv
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3001
    targetPort: 3001
