99_Practice/infra/k8s/posttext-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posttext-srv
spec:
  type: NodePort
  selector:
    app: posttext
  ports:
  - name: posttext
    protocol: TCP
    port: 5001
    targetPort: 5001
