99_Practice/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: posttext.com
    http:
      paths:
      - pathType: Prefix
        path: "/posttext"
        backend:
          service:
            name: posttext-clusterip-srv
            port: 
              number: 5001
